Firefox, IE bugs squashed

--- a/app/assets/stylesheets/pollapp.css.scss
+++ b/app/assets/stylesheets/pollapp.css.scss
@@ -99,6 +99,10 @@ a.do_icon {
       font-size: 45px;
       letter-spacing: 2px;
       margin: 0;
+      #polladillo{
+        width:120px;
+        height:69px;
+      }
       span{
        position: relative;
        top: 7px; 
